<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/Register_Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:fontFamily="@font/aref_ruqaa_bold"
        android:padding="12dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="@color/titleColor"
        android:textSize="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/Register_Title"
        android:padding="25dp">

        <EditText
            android:id="@+id/register_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:hint="Name"
            android:inputType="text"
            android:maxLines="1"
            android:padding="8dp"
            android:singleLine="true"
            android:textColor="@color/accountBackground"
            android:textColorHint="@color/accountLabel"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="8dp"
            android:singleLine="true"
            android:textColor="@color/accountBackground"
            android:textColorHint="@color/accountLabel"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/prompt_password"
            android:inputType="numberPassword"
            android:maxLines="1"
            android:padding="8dp"
            android:singleLine="true"
            android:textColor="@color/accountBackground"
            android:textColorHint="@color/accountLabel"
            android:textSize="17sp" />

        <Button
            android:id="@+id/register_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginTop="35dp"
            android:background="@color/signUp"
            android:text="@string/signUp"
            android:textColor="@color/colorWhite"
            android:textStyle="bold" />

    </LinearLayout>

</RelativeLayout>