<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".SummaryActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_above="@+id/adView2"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/summary_title"
            android:layout_width="match_parent"
            android:background="@color/colorPrimaryDark"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/aref_ruqaa_bold"
                android:padding="12dp"
                android:text="   My Orders"
                android:textColor="@color/titleColor"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/action_refresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:layout_alignParentRight="true"
                android:padding="12dp"
                android:text="Refresh"
                android:textColor="@color/colorBlack"
                android:textSize="15dp" />

        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/order_recycler_view"
            android:layout_below="@+id/summary_title"
            android:scrollbars="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <!-- Empty view for the list -->
        <RelativeLayout
            android:id="@+id/empty_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <ImageView
                android:id="@+id/empty_shelter_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_empty_shelter"/>

            <TextView
                android:id="@+id/empty_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/empty_shelter_image"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif-medium"
                android:paddingTop="16dp"
                android:textColor="@color/button_color"
                android:text="@string/empty_view_title_text"
                android:textAppearance="?android:textAppearanceMedium"/>

            <TextView
                android:id="@+id/empty_subtitle_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/empty_title_text"
                android:layout_centerHorizontal="true"
                android:fontFamily="sans-serif"
                android:paddingTop="8dp"
                android:text="@string/empty_view_subtitle_text"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="#52ACB0"/>
        </RelativeLayout>
    </RelativeLayout>

    <!-- view for AdMob Banner Ad -->
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" />

</RelativeLayout>