<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".OrderActivity"
    tools:showIn="@layout/app_bar_order">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <LinearLayout
        android:id="@+id/source"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/adamina"
            android:text="@string/source_name"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/source"
            android:textStyle="bold" />

        <!-- Input field -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Gender drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_source"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/above_destination"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/source"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginVertical="2dp"
        android:background="@color/source" />

    <LinearLayout
        android:id="@+id/destination"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/above_destination"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:fontFamily="@font/adamina"
            android:text="@string/destination"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/source"
            android:textStyle="bold" />

        <!-- Input field -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Gender drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_destination"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:id="@+id/above_customer"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/destination"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginVertical="2dp"
        android:background="@color/source" />

    <LinearLayout
        android:id="@+id/no_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/above_customer"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/no_of_customer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/adamina"
            android:text="@string/customer"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/source"
            android:textStyle="bold" />

        <Button
            android:id="@+id/decrement_customer"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@color/button_color"
            android:text="-" />

        <TextView
            android:id="@+id/quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/adamina"
            android:padding="10dp"
            android:text="1"
            android:textColor="@color/source"
            android:textSize="21sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/increment_customer"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@color/button_color"
            android:text="+" />

    </LinearLayout>

    <View
        android:id="@+id/nothing"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/no_page"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginVertical="2dp"
        android:background="@color/source" />


    <LinearLayout
        android:id="@+id/money"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/nothing"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/adamina"
            android:text="Total Payment"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="@color/source"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/actual_money"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/adamina"
            android:layout_weight="1"
            android:padding="10dp"
            android:text="₹ 10"
            android:textColor="@color/source"
            android:textSize="21sp"
            android:textStyle="bold" />

    </LinearLayout>

    <Button
        android:id="@+id/order_auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/adView"
        android:background="@color/button_color"
        android:text="ORDER NOW"
        android:textColor="#FCE4EC"
        android:textSize="22sp" />

    <!-- view for AdMob Banner Ad -->
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_unit_id" />

</RelativeLayout>